syntax = "proto3";
package hello;

option go_package = "gogrpc/hello";

message User { string username = 1; }
message Message { string body = 2; }

message ChatMessage {
  User user = 1;
  string body = 2;
}
message SendResponse { int32 status = 1; }

message Empty{

}
service ChatService {
  rpc SayHello(Message) returns (Message) {}
  rpc JoinChat(User) returns (stream ChatMessage) {}
  rpc SendToChat(ChatMessage) returns (Empty) {}
}
